fix: change global body overflow to clip to fix native sticky scrolling

--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -109,7 +109,7 @@
   body {
     width: 100%;
     height: 100dvh;
-    overflow: hidden;
+    overflow-x: clip;
     overscroll-behavior: none;
     -webkit-text-size-adjust: 100%;
   }
